@@ -21,6 +21,7 @@ Bugfixes
 Features
 --------
 
+* Add Interlingua translation by Alberto Mardegan
 * Add Afrikaans translation by Friedel Wolff
 * Support for docutils.conf (Issue #3188)
 
